tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/rawmulti-lf.stderr
TOML parse error at line 1, column 22
  |
1 | rawmulti-lf = '''null'''
  |                      ^
invalid multiline literal string
